force-app/main/default/objects/pse__Milestone__c/fields/CT_From_Line_Set__c.field-meta.xml
<CustomField>
    <fullName>CT_From_Line_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Line Set</label>
    <type>Checkbox</type>
</CustomField>