force-app/main/default/objects/pse__Milestone__c/fields/CT_Name_Original__c.field-meta.xml
<CustomField>
    <fullName>CT_Name_Original__c</fullName>
    <label>Name (Original)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>