force-app/main/default/objects/pse__Milestone__c/fields/Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description__c</fullName>
    <description>Captures Milestone description and will be used on the billing event item as well as Invoice.</description>
    <inlineHelpText>This description will carry forward to the billing event item as well as Invoice</inlineHelpText>
    <label>Milestone Description</label>
    <type>TextArea</type>
</CustomField>