force-app/main/default/objects/pse__Milestone__c/fields/Project_Partner_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Project_Partner_is_Current_User__c</fullName>
    <formula>pse__Project__r.CT_Project_Partner__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Partner is Current User</label>
    <type>Checkbox</type>
</CustomField>