force-app/main/default/objects/pse__Milestone__c/validationRules/Description_needed_for_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_needed_for_Billing</fullName>
    <active>true</active>
    <description>Description needed for Billing</description>
    <errorConditionFormula>AND(pse__Description__c ==&apos;&apos;,NOT(ISNULL( pse__Actual_Date__c )))</errorConditionFormula>
    <errorDisplayField>ffrrPercentComplete__c</errorDisplayField>
    <errorMessage>Please enter a Milestone Description</errorMessage>
</ValidationRule>