force-app/main/default/objects/pse__Milestone__c/listViews/psaws__Late_For_My_Projects.listView-meta.xml
<ListView>
    <fullName>psaws__Late_For_My_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Target_Date__c</columns>
    <columns>pse__Actual_Date__c</columns>
    <columns>pse__Milestone_Amount__c</columns>
    <columns>pse__Milestone_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Milestone_Is_Late__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__Project_Manager_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__Project_Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billing_Event_Released__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </filters>
    <label>My Projects with Late Milestones</label>
</ListView>